- 
    Bug 
- 
    Resolution: Done
- 
    P3: Somewhat important 
- 
    5.0.0
- 
    None
- 
    Windows 7
- 
        2a6a3f0b6b6b1317a9fb2fd55202e4dbadbc3795
QAxWidget exposes Q_INVOKABLE methods of Qt widget based activeX servers, but invoking such method will crash the server:
ASSERT: "slot.methodType() == QMetaMethod::Slot" in file .\qaxserverbase.cpp, line 2383
Seems that QAxWidgets only support invoking slots at the moment.
- is required for
- 
                    QTBUG-24209 Qt 5.0 - Windows: Fix the QtActiveQt module -         
- Closed
 
-