QAxServer: Enable Q_INVOKABLE methods.

Task-number: QTBUG-26011
Change-Id: I2d91941e460e816dc6e518e4a3f059a40343bd83
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@digia.com>
Reviewed-by: Oliver Wolff <oliver.wolff@digia.com>